fix horizontal scroll bar on subscriber page and show foodscape page. Deleted weird horrible persistant margin on the right. Good riddance.

--- a/src/app/show-garden/show-garden.less
+++ b/src/app/show-garden/show-garden.less
@@ -1,5 +1,6 @@
 .container-fluid{
 	padding: 0px;
+  margin-right: 15px;
 
 	.profile-bar{
 		margin-top: -80px;
@@ -7,6 +8,7 @@
 		min-height: 200px;
 		text-align: center;
 		padding: 20px;
+    margin-right: -15px;
 	}
 }
 
