--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,6 +1,8 @@
 @import 'variables.less';
 @import '../../vendor/bootstrap/less/bootstrap.less';
 
+html,body {padding:0 !important; margin:0 !important;}
+
 h1, h2, h3 {
   font-family: 'PT Sans', sans-serif;
 }
